added comments to .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-USERNAME='ENTER YOUR USERNAME HERE'
-PASSWORD='ENTER YOUR PASSWORD HERE'
+USERNAME='' #Enter your USERNAME inside the quotes
+PASSWORD='' #Enter your PASSWORD inside the quotes
